--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.13.0
 djangorestframework==3.14.0
 idna==3.4
 pycodestyle==2.10.0
+python-dotenv==0.21.0
 pytz==2022.7
 PyYAML==6.0
 requests==2.28.1
