--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.1
 Django==4.1.5
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 pycodestyle==2.10.0
 python-dotenv==0.21.0
