--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ asgiref==3.6.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.5
+tensorflow==2.4.1
+Keras==2.4.3
+numpy==1.19.5
+Pillow==8.1.2
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
